eclipseWorkspace/AK SFDC/src/objects/IdentifiedCandidateAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity__r.AccountId,  Opportunity__r.Account.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ak_IdentID__c</fullName>
        <externalId>true</externalId>
        <label>Ak_IdentID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Akascia_Comments__c</fullName>
        <label>Akascia Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Akascia_Other_Reason__c</fullName>
        <label>Akascia Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Akascia_Suitability_Level__c</fullName>
        <label>Akascia Interest Level</label>
        <picklist>
            <picklistValues>
                <fullName>Walking Placement!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meh...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nah</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Comments__c</fullName>
        <label>Candidate Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_Interest_Level__c</fullName>
        <label>Candidate Interest Level</label>
        <picklist>
            <controllingField>Responded__c</controllingField>
            <picklistValues>
                <fullName>Loves it!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meh...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nah</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Candidate Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Identified Opportunities</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Other_Reason__c</fullName>
        <label>Candidate Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Stage__c</fullName>
        <defaultValue>&quot;01.Identified&quot;</defaultValue>
        <label>Candidate Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Comments__c</fullName>
        <label>Client Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Interest_Level__c</fullName>
        <label>Client Interest Level</label>
        <picklist>
            <controllingField>Submitted_to_Client__c</controllingField>
            <picklistValues>
                <fullName>Hot to Trot!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meh...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nah</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Other_Reason__c</fullName>
        <label>Client Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewed_by_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interviewed by Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Further_Action__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Needs Further Action?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Identified Candidates</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Akascia_Objection__c</fullName>
        <label>Primary Akascia Objection</label>
        <picklist>
            <controllingField>Akascia_Suitability_Level__c</controllingField>
            <picklistValues>
                <fullName>Already been Approached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chased but no Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level of Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seniority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unstable Work History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Candidate_Objection__c</fullName>
        <label>Primary Candidate Objection</label>
        <picklist>
            <controllingField>Candidate_Interest_Level__c</controllingField>
            <picklistValues>
                <fullName>Accepted a Role Elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company too Big</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company too Small / Young / Unstable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company not as Appealing as Current Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Looking for a Move Right Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role too Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role too Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role too Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role too Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary too Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector not Interesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Objection__c</fullName>
        <label>Primary Client Objection</label>
        <picklist>
            <controllingField>Client_Interest_Level__c</controllingField>
            <picklistValues>
                <fullName>Culture Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level of Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seniority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unstable Work History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only Select if the Candidate has Responded. This field cannot be changed once it&apos;s set to &quot;True&quot;.</inlineHelpText>
        <label>Responded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akascia.com Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkedin Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral from Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Candidate_Stage__c, &quot;&quot;, &apos;_blank&apos;) &amp; 

HYPERLINK(&quot;/&quot; &amp; Id, Candidate_Stage__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage (Click to Update)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Still_In_Client_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will automatically update when you change the &quot;Stage&quot; but can still be edited manually.</inlineHelpText>
        <label>Still In Client Process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted to Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bh_JobResponseID__c</fullName>
        <externalId>true</externalId>
        <label>bh_JobResponseID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Identified Candidate Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Stage__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Candidate_Stage__c</columns>
        <columns>Responded__c</columns>
        <columns>Submitted_to_Client__c</columns>
        <columns>Interviewed_by_Client__c</columns>
        <columns>Still_In_Client_Process__c</columns>
        <columns>Needs_Further_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IdentID{000000}</displayFormat>
        <label>Identified Candidate Association ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identified Candidate Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Akascia_Other_Reason_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Primary_Akascia_Objection__c , &quot;Other&quot;),  Akascia_Other_Reason__c = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Akascia_Other_Reason__c</errorDisplayField>
        <errorMessage>Please insert your &quot;Other&quot; reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Candidate_Other_Reason_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Primary_Candidate_Objection__c , &quot;Other&quot;),    Candidate_Other_Reason__c = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Candidate_Other_Reason__c</errorDisplayField>
        <errorMessage>Please insert your &quot;Other&quot; reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Not_to_Retainer</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.RecordTypeId = &quot;012b0000000TsQG&quot;</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>You can not submit candidates to retainers. Please try again using the actual Assignment Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Other_Reason_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Primary_Client_Objection__c , &quot;Other&quot;),   Client_Other_Reason__c = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Client_Other_Reason__c</errorDisplayField>
        <errorMessage>Please insert your &quot;Other&quot; reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_to_Interview_by_Client</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
PRIORVALUE(Interviewed_by_Client__c) = True,
ISCHANGED(Interviewed_by_Client__c)
)</errorConditionFormula>
        <errorDisplayField>Interviewed_by_Client__c</errorDisplayField>
        <errorMessage>You cannot change the &quot;Interviewed by Client?&quot; field, once it&apos;s been set to &quot;True&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_to_Responded</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
PRIORVALUE( Responded__c )=True,
ISCHANGED(Responded__c )
)</errorConditionFormula>
        <errorDisplayField>Responded__c</errorDisplayField>
        <errorMessage>You cannot change the &quot;Responsed?&quot; field once it&apos;s been set to &quot;True&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_to_Submitted_to_Client</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
PRIORVALUE(Submitted_to_Client__c ) = True,
ISCHANGED(Submitted_to_Client__c )
)</errorConditionFormula>
        <errorDisplayField>Submitted_to_Client__c</errorDisplayField>
        <errorMessage>You cannot manually change the &quot;Submitted to Client?&quot; field, once it&apos;s been set to &quot;True&quot;.</errorMessage>
    </validationRules>
</CustomObject>